@@ -1,6 +1,6 @@
 = rails3-generators
 
-Generators for DataMapper, Factory-girl, Authlogic, Mongomapper, Shoulda, Formtastic and SimpleForm
+Rails 3 compatible generators for gems that don't have them yet 
 
 == install
 
@@ -45,8 +45,6 @@ Mongomapper: Jai-Gouk Kim
 MongoMapper: Kristian Mandrup (for 0.8) - needs testing
 
 Mongoid: Kristian Mandrup (for 2.0.beta) - needs testing
-
-Machinist: Darcy Laycock
 
 Shoulda: Peter Haza
 
