@@ -51,7 +51,6 @@ def generator_list
     :erubis       => ['scaffold'],
     :simple_form  => ['scaffold'],
     :formtastic   => ['scaffold'],
-    :fabrication  => ['model'],
     :factory_girl => ['model'],
     :authlogic    => ['session'],
     :koala        => ['install'],
